fixed issue with submit button on safari ios

--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -41,6 +41,7 @@
 }
 
 .submit {
+    -webkit-appearance: none;
     margin-top: 2rem;
     background: #000;
     color: #FFF;
